--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+Spring Security Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-s3am0v2q.us.auth0.com/
 
+# Logging Configuration
+logging.level.root=INFO
+
+# DataSource Configuration for H2 Database
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Console Configuration
+spring.h2.console.enabled=true
+
+# JPA Initialization Configuration
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.defer-datasource-initialization=true
