Added changes to nutritional info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-s3am0v2q.us.aut
 logging.level.root=INFO
 
 # DataSource Configuration for H2 Database
+spring.sql.init.mode=always
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
